Fixed padding in the graph and alignment of the parameters displayed

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/table.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/table.less
@@ -62,6 +62,11 @@
             border-bottom: none;
           }
         }
+        // Removed padding for expanded rows to prevent unnecessary scrolling behavior for the expanded row content
+        tbody > .ant-table-expanded-row > td {
+          padding-left: 0px;
+          padding-right: 0px;
+        }
       }
     }
   }
